# Fluss-python-py4j

./: .gitignore  MANIFEST.in  README.md  build_package.sh  pom.xml  pyproject.toml  requirements.txt  setup.py  test_data_writer.py  the_test.py  tox.ini
dev/: build-source-distribution-package.sh  dev-requirements.txt  test-installation.sh
pyfluss/: __init__.py  cli.py  connection.py  reader.py  version.py  writer.py
pyfluss/api/: __init__.py  admin.py  catalog.py  fluss_table_read.py  metadata.py  read_builder.py  row_type.py  schema.py  table.py  table_scan.py  table_write.py  write_builder.py
pyfluss/py4j/: __init__.py  gateway_server.py  java_gateway.py  java_implementation.py
pyfluss/py4j/tests/: __init__.py  test_basic.py  test_package_integrity.py  test_schema.py
pyfluss/py4j/util/: constants.py  java_utils.py
src/main/java/org/example/: FlussClientBridge.java  FlussConnection.java  FlussDataReader.java  FlussDataReaderFactory.java  FlussDataWriter.java  FlussDataWriterFactory.java  FlussEnvUtils.java  FlussGateway.java  FlussNetUtils.java  Py4JGatewayServer.java  SchemaUtil.java  SimplePy4JGatewayServer.java
