[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfluss"
dynamic = ["version"]
description = "Python SDK for Apache Fluss"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Apache Software Foundation", email = "dev@fluss.apache.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "py4j==0.10.9.7",
    "pandas>=1.3.0",
    "pyarrow>=5.0.0"
]

[project.optional-dependencies]
avro = [
    "fastavro>=1.9.0",
    "zstandard>=0.23.0"
]
dev = [
    "pytest>=7.0",
    "flake8>=4.0.1",
    "mypy>=1.5.1",
    "tox>=3.14.0"
]

[project.urls]
Homepage = "https://fluss.apache.org"
Repository = "https://github.com/apache/fluss-python"
Documentation = "https://fluss.apache.org/docs"

[tool.setuptools.dynamic]
version = {attr = "pyfluss.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["pyfluss*"]
exclude = ["tests*"]
